# solana-starter-kit

./: .env.example  .gitIgnore  .gitpod.Dockerfile  .gitpod.yml  Anchor.toml  Cargo.toml  README.md  client.js  client.ts  ocr2.json  package-lock.json  package.json  read-data.js  read-data.ts  store.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
ccip-lib/evm/: README.md  index.ts
ccip-lib/evm/abi/: BurnMintERC677Helper.json  BurnMintTokenPool.json  OnRamp.json  Router.json  TokenAdminRegistry.json  types.ts
ccip-lib/evm/core/: message-factory.ts  models.ts  validation.ts
ccip-lib/evm/utils/: ccip.ts  logger.ts  solana.ts  transactions.ts
ccip-lib/svm/: README.md  index.ts
ccip-lib/svm/bindings/: programId.ts
ccip-lib/svm/burnmint-pool-bindings/: programId.ts
ccip-lib/svm/core/: models.ts  token-manager.ts
ccip-lib/svm/tokenpools/: abstract.ts  factory.ts  index.ts
ccip-lib/svm/utils/: accounts.ts  conversion.ts  errors.ts  index.ts  keypair.ts  logger.ts  token-creation.ts  token.ts  transaction.ts
ccip-scripts/: README.md  config-test.js
ccip-scripts/config/: index.ts
ccip-scripts/evm/: README.md
ccip-scripts/evm/router/: 1_token-transfer.ts  2_arbitrary-messaging.ts  3_data-and-tokens.ts  check-fee.ts
ccip-scripts/evm/token/: drip.ts
ccip-scripts/evm/utils/: ccip.ts  cli-framework.ts  client-factory.ts  config-parser.ts  index.ts  message-utils.ts  provider.ts  setup-client.ts  (+1 more)
ccip-scripts/router/: ccip-send.ts  get-ccip-fee.ts
ccip-scripts/svm/: README.md
ccip-scripts/token/: check-token-approvals.ts  delegate-token-authority.ts  wrap-sol.ts
ccip-scripts/utils/: client-factory.ts  config-parser.ts  deploy.ts  get-state-address.ts  index.ts  provider.ts
ccip-sdk/: index.ts
ccip-sdk/core/: models.ts
ccip-sdk/utils/: logger.ts
log/: initialize-global-config.txt  initialize-pool.txt  pool-info.txt
programs/ccip-basic-receiver/: Cargo.toml
programs/ccip-basic-receiver/src/: constants.rs  context.rs  error.rs  events.rs  lib.rs  state.rs
programs/ccip-basic-receiver/src/instructions/: ccip_receive.rs  get_latest_message.rs  initialize.rs  initialize_token_vault.rs  mod.rs  withdraw_tokens.rs
programs/chainlink_solana_demo/: Cargo.toml
programs/chainlink_solana_demo/src/: lib.rs
tests/: chainlink-solana-demo-int-test.ts
(+207 files in other folders)
