[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-program = "1.18.20"

[workspace.dependencies.chainlink_solana]
version = "1.0.0"
features = ["no-entrypoint"]
